# smolr

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  rand.rs
src/linux/: mod.rs
src/win32/: mod.rs
