[package]
name = "smolr"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/wutterfly/smolr.git"
license = "MIT OR Apache-2.0"
keywords = ["random-numbers"]
categories = ["mathematics", "no-std", "os"]
description = "A very small random-number library."

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Cryptography"]


[target.'cfg(target_os = "linux")'.dependencies.libc]
version = "0.2.0"
default-features = false
